--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,21 @@
 site_name: Opossum Search Documentation
+site_description: Documentation for the Opossum Search system
+site_author: bebo
+
+# Repository
+# repo_name: opossum-search
+# repo_url: https://github.com/yourusername/opossum-search
+
+# Theme configuration
 theme:
-  name: material
+  name: readthedocs
+  # favicon: assets/images/favicon.png
   features:
     - navigation.tabs
     - navigation.sections
     - toc.integrate
+    - navigation.expand
+    - navigation.indexes
     - search.suggest
     - search.highlight
     - content.tabs.link
@@ -12,25 +23,41 @@ theme:
     - content.code.copy
   palette:
     - scheme: default
+      primary: indigo
+      accent: indigo
       toggle:
-        icon: material/brightness-7
+        icon: material/toggle-switch-off-outline
         name: Switch to dark mode
     - scheme: slate
+      primary: indigo
+      accent: indigo
       toggle:
-        icon: material/brightness-4
+        icon: material/toggle-switch
         name: Switch to light mode
 
+# Extensions
 markdown_extensions:
   - tables
+  - attr_list
+  - md_in_html
+  - admonition
   - pymdownx.highlight:
       anchor_linenums: true
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.inlinehilite
   - pymdownx.tabbed:
       alternate_style: true
-  - attr_list
-  - md_in_html
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.superfences
+  - pymdownx.highlight
+  - pymdownx.details
 
+# Navigation structure
 nav:
   - Home: index.md
   - Service Availability:
@@ -44,3 +71,10 @@ nav:
     - Fallback Mechanisms: service-availability/fallback-mechanisms.md
     - Testing and Validation: service-availability/testing-validation.md
     - Diagrams: service-availability/processing-diagrams.md
+
+# Plugins
+plugins:
+  - search
+  - minify:
+      minify_html: true
+  - mermaid2
