--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,43 @@ scikit-learn
 numpy
 transformers
 requests~=2.32.3
+
 # Optional dependencies based on backend choice
 google-generativeai
+
+# SVG Generation and Rendering
+cairosvg~=2.7.1
+pillow~=10.1.0
+
+# Background Animation
+markovify~=0.9.4
+emoji~=2.10.1
+
+# Image Processing
+Wand>=0.6.11
+textblob>=0.17.1
+pydantic>=2.5.0
+flask-limiter>=3.5.0
+marshmallow>=3.20.0
+
+# GraphQL and API
+graphene>=3.4.3
+flask-graphql>=2.0.0
+graphql-core>=3.2.6
+ariadne>=0.19.1  # For schema introspection
+opentelemetry-instrumentation-flask>=0.40b0  # For metrics and tracing
+ddtrace>=1.18.1  # For Apollo Studio compatibility
+
+# Middleware
+flask-cors>=4.0.0
+flask-compress>=1.14
+
+# Redis
+redis>=5.2.1
+
+# Caching
+cachetools>=5.3.2
+
+# Testing
+pytest==7.4.0
+pytest-cov==4.1.0
