--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,8 @@ graphql-core>=3.2.6
 ariadne>=0.19.1  # For schema introspection
 opentelemetry-instrumentation-flask>=0.40b0  # For metrics and tracing
 ddtrace>=1.18.1  # For Apollo Studio compatibility
+opentelemetry-sdk
+opentelemetry.exporter.otlp
 
 # Middleware
 flask-cors>=4.0.0
