--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,9 @@ redis>=5.2.1
 # Caching
 cachetools>=5.3.2
 
+# Metrics and Monitoring
+prometheus-client>=0.19.0
+
 # Testing
 pytest==7.4.0
 pytest-cov==4.1.0
