--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 flask~=3.1.0
-httpx~=0.28.1
+httpx~=1.0.0b0
 cachetools>=5.3.2,<6.0
 sentence-transformers
 scikit-learn
-numpy
+numpy~=2.2.4
 transformers
 requests~=2.32.3
 
@@ -12,11 +12,11 @@ google-generativeai
 
 # SVG Generation and Rendering
 cairosvg~=2.7.1
-pillow~=10.1.0
+pillow~=11.1.0
 
 # Background Animation
 markovify~=0.9.4
-emoji~=2.10.1
+emoji~=2.14.1
 
 # Image Processing
 Wand>=0.6.11
@@ -31,9 +31,9 @@ flask-graphql>=2.0.0
 graphql-core>=3.2.6
 ariadne>=0.19.1  # For schema introspection
 opentelemetry-instrumentation-flask>=0.40b0  # For metrics and tracing
-ddtrace>=1.18.1  # For Apollo Studio compatibility
 opentelemetry-sdk
 opentelemetry.exporter.otlp
+ddtrace>=1.18.1  # For Apollo Studio compatibility
 
 # Middleware
 flask-cors>=4.0.0
@@ -49,5 +49,6 @@ cachetools>=5.3.2
 prometheus-client>=0.19.0
 
 # Testing
-pytest==7.4.0
+pytest~=8.3.5
 pytest-cov==4.1.0
+promise~=2.3
