--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ numpy~=2.2.4
 transformers
 requests~=2.32.3
 dotenv~=0.9.9
-
+psutil~=5.9.5
 # Optional dependencies based on backend choice
 google-generativeai
 
